# v-sizer

./: .buildconfig  Cargo.toml  README.md  sizer.rs
build-aux/: com.openshift.virtualization.sizer.Devel.json  com.openshift.virtualization.sizer.json
data/: cluster-simple.json  clustertopology-simple.json  node-simple.json  node-x2idn.json  u1medium.json  workload-simple.json
src/: lib.rs  main.rs
