[package]
name = "sizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
clap = { version = "4.3.23", features = ["derive"] }
display_json = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
