[package]
name = "sizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = { version = "4.0.19", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive"] }
display_json = "0.2.1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

#[lib]
#crate-type = ["cdylib"]
